Commented index.html with the changes made

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- NOTE: Font was lowering the performance score waaay to much so I was forced to remove it
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
     <!-- <link href="css/style.css" rel="stylesheet"> -->
+    <!-- NOTE: Inlined the CSS since the file wasn't too big -->
     <style>
       html {
         font-size: 100%;
@@ -64,6 +65,8 @@
     </style>
     <link href="css/print.css" rel="stylesheet" media="print">
     <script async src="js/perfmatters.js"></script>
+    <!-- NOTE: Made the analytics script async and moved the other script to the
+     end to execute after the document is ready-->
     <script async src="https://www.google-analytics.com/analytics.js"></script>
   </head>
 
@@ -112,6 +115,7 @@
     </div>
   </body>
   <script>
+  // NOTE: Moved this script from the head to here to load only after document is ready
     document.addEventListener("DOMContentLoaded", function(event) {
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
