Fine-tuned index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content=" Very Nice ">
+    <meta name="author" content=" amalolan ">
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- NOTE: Font was lowering the performance score waaay to much so I was forced to remove it
@@ -113,16 +113,16 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
     </div>
-  </body>
-  <script>
-  // NOTE: Moved this script from the head to here to load only after document is ready
-    document.addEventListener("DOMContentLoaded", function(event) {
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
+    <script>
+    // NOTE: Moved this script from the head to here to load only after document is ready
+      document.addEventListener("DOMContentLoaded", function(event) {
+        (function(w,g){w['GoogleAnalyticsObject']=g;
+        w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
-      // Optional TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    });
-  </script>
+        // Optional TODO: replace with your Google Analytics profile ID.
+        ga('create', 'UA-XXXX-Y');
+        ga('send', 'pageview');
+      });
+    </script>
+  </body>
 </html>
